# kawasemi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.json
.claude/hooks/: cargo-lint-stop.sh  cargo-test-stop.sh
.kiro/steering/: product.md  roadmap.md  structure.md  tech.md
docs/: fediverse-design.md  mastodon-api-compat.md  mastodon-api-estimate.md
migrations/: 0001_init_runtime.sql  0002_actors.sql  0003_oauth.sql  0004_federation.sql  0005_media.sql  0006_accounts.sql  0007_statuses.sql
src/: accounts.rs  actor.rs  api.rs  bootstrap.rs  config.rs  contract.rs  db.rs  domain.rs  error.rs  federation.rs  lib.rs  main.rs  media.rs  migrate.rs  oauth.rs  runtime.rs  server.rs  state.rs  statuses.rs  telemetry.rs  test_harness.rs
src/accounts/: account_service.rs  custom_emoji_serializer.rs  emoji_repository.rs  emoji_service.rs  endpoints.rs  instance_serializer.rs  instance_service.rs  model.rs  ports.rs  profile_repository.rs  relationship_serializer.rs  remote_fetcher.rs  remote_repository.rs  serializer.rs  settings_repository.rs
src/actor/: directory.rs  keys.rs  model.rs  owner.rs  repository.rs  service.rs
src/api/: error.rs  pagination.rs  ratelimit.rs
src/bootstrap/: tests.rs
src/config/: mod.rs  secret.rs  tests.rs
src/contract/: tests.rs
src/db/: tests.rs
src/domain/: primitives.rs
tests/: account_show_it.rs  account_statuses_it.rs  accounts_endpoints_wiring_it.rs  accounts_migrations_it.rs  accounts_module_wiring_it.rs  actor_bootstrap_wiring_it.rs  actor_lifecycle_it.rs  actor_migrations_it.rs  ap_get_outbox_it.rs  api_foundation_wiring_it.rs  auth_scope_it.rs  bootstrap_fail_fast_it.rs  bootstrap_lifecycle_it.rs  contract_harness_fixture_it.rs  contract_harness_it.rs  custom_emojis_it.rs  db_pool_it.rs  error_ratelimit_it.rs  federation_bootstrap_it.rs  federation_migrations_it.rs  federation_pair_it.rs  inbox_delivery_it.rs  inbox_it.rs  instance_v2_it.rs  media_attachment_contract_it.rs  media_bootstrap_wiring_it.rs  media_endpoints_it.rs  media_migrations_it.rs  media_poll_it.rs  media_processing_it.rs  media_store_it.rs  media_update_it.rs  media_upload_it.rs  migrate_it.rs  oauth_apps_it.rs  oauth_authorize_it.rs  oauth_flow_it.rs  oauth_migrations_it.rs  oauth_token_it.rs  owner_actor_boundary_it.rs  (+9 more)
(+222 files in other folders)
