[package]
name = "kawasemi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "migrate"] }
time = "0.3.53"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0.150"
time = { version = "0.3.53", features = ["macros"] }
