[package]
name = "kawasemi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
blurhash = "0.2.3"
chacha20poly1305 = { version = "0.11.0", default-features = false, features = ["alloc"] }
getrandom = "0.4.3"
hmac = "0.13.0"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "migrate", "time"] }
subtle = "2.6.1"
time = "0.3.53"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["trace"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
time = { version = "0.3.53", features = ["macros"] }
tower = { version = "0.5.3", features = ["util"] }
